add pom.xml, adapt build.xml, remove todo from Readme.md

--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 				<attribute name="Created-By" value="tinycodecrank"/>
 				<attribute name="Class-Path" value="."/>
 			</manifest>
-			<fileSet dir="bin"/>
+			<fileSet dir="target/classes"/>
 		</jar>
 	</target>
 </project>
