--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,6 +16,8 @@ jobs:
       packages: write
 
     steps:
+    - name: github.workspace
+      run: echo $GITHUB_WORKSPACE
     - uses: actions/checkout@v3
     - name: Set up JDK 18
       uses: actions/setup-java@v3
