--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,13 +24,15 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
-        server-id: github_better_functionals # Value of the distributionManagement/repository/id field of the pom.xml
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      env:
+        GITHUB_TOKEN: ${{ secrets.MAVEN_REGISTRY_TOKEN }}
+      run: mvn -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
-        GITHUB_TOKEN: ${{ secrets.PACKAGE_ACCESS_BETTER_FUNCTIONALS }}
+        GITHUB_TOKEN: ${{ secrets.MAVEN_REGISTRY_TOKEN }}
